blockml/test/errors/01_yaml/e296/e296.view
view: e296
table: 1
udfs: 
- 'u1'
fields:
- dimension: dim5
  sql: 555
